deployment/dok8s/base/market-read-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: market-read-api
  labels:
    app.kubernetes.io/app: market-read-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/app: market-read-api
  template:
    metadata:
      labels:
        app.kubernetes.io/app: market-read-api
    spec:
      containers:
        - name: market-read-api
          image: freeverseio/market.read.api:dev
          imagePullPolicy: Always
      imagePullSecrets:
        - name: docker-secret
