deployment/dok8s/base/market-read-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: market-read-api
  labels:
    app.kubernetes.io/app: market-read-api
spec:
  ports:
  - port: 4000
  selector:
    app.kubernetes.io/app: market-read-api
