deployment/dok8s/base/market-read-api/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: freeverse
  name: cryptosoccer-market-ro-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
    nginx.ingress.kubernetes.io/auth-tls-error-page: "http://www.mysite.com/error-cert.html"
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    cert-manager.io/cluster-issuer: letsencrypt-freeverse
spec:
  tls:
  - hosts:
    - market-ro.gorengine.com
    secretName: cryptosoccer-market-ro-tls
  rules:
  - host: market-ro.gorengine.com
    http:
      paths:
      - path: /
        backend:
          serviceName: market-read-api
          servicePort: 4000
